<resources>
    <string name="app_name">FOOD App</string>
    <string name="login">Login</string>

    <string name="skip">Skip</string>
    <string name="cafe_house">Cafe House</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="or_with">Or with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="already_signed_in_login">Already signed in? Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="delicious_food">DELICIOUS FOOD</string>
</resources>