<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70A89E9E"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/food_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="30dp"
            app:tint="#FFFFFF"
            app:srcCompat="@drawable/food_icon" />

        <TextView
            android:id="@+id/txtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/cafe_house"
            android:textColor="#F4F1EC"
            android:textSize="60sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bt_gradient"
            android:text="@string/login"
            android:textColor="#FFFBFB"
            android:textStyle="bold"
            android:onClick="Login"/>

        <Button
            android:id="@+id/btsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bt_gradient"
            android:text="@string/register"
            android:onClick="Account"
            android:textColor="#FFFBFB"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txskip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="#D2FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>